--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Clases JavaScript</title>
 </head>
 <body>
-    <script src="js/script.js"></script>
+    <!--<script src="js/script.js"></script>-->
+    <script src="js/funcion.js"></script>
 </body>
 </html>
