--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!--<script src="js/script.js"></script>-->
-    <script src="js/funcion.js"></script>
+   <!-- <script src="js/funcion.js"></script>-->
+    <script src="js/arrays.js"></script>
 </body>
 </html>
