Practica con arrays y objetos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <!--<script src="js/script.js"></script>-->
    <!-- <script src="js/funcion.js"></script>-->
-    <script src="js/arrays.js"></script>
+   <!-- <script src="js/arrays.js"></script>-->
+   <script src="js/objetos.js"></script>
+    <!--<script src="js/localStorage.js"></script>-->
 </body>
 </html>
